--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=chat-app-backend
 
 
-spring.data.mongodb.uri=mongodb://db:27017/chatapp
+spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+
+server.port=8080
