--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=chat-app-backend
 
 
-spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+spring.data.mongodb.uri=mongodb+srv://pranav19:pass123@cluster0.veq95.mongodb.net
 
 server.port=8080
+
