--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=chat-app-backend
 
 
-spring.data.mongodb.uri=mongodb+srv://pranav19:pass123@cluster0.veq95.mongodb.net
+spring.data.mongodb.uri=mongodb+srv://pranav19:pass123@cluster0.veq95.mongodb.net/chatapp?retryWrites=true&w=majority
 
 server.port=8080
 
