--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.application.name=chat-app-backend
 
 server.port=8080
 
-spring.data.mongodb.uri=mongodb+srv://pranav19:pass123@cluster0.veq95.mongodb.net/chatapp
+spring.data.mongodb.uri=mongodb+srv://pranav19:pass123@cluster0.veq95.mongodb.net/chatapp?retryWrites=true&w=1
